--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-:root{
+
+:root {
     --color: #bfce99;
-    --back:#3d3d3d;
+    --back: #3d3d3d;
 }
-body{
+
+body {
     background: var(--back);
 }
-header{
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,7 +24,8 @@ header{
     padding: 10px 13%;
     transition: all 0.5s ease;
 }
-header::before{
+
+header::before {
     content: '';
     top: 0;
     left: 0;
@@ -30,7 +34,8 @@ header::before{
     width: 100%;
     height: 100%;
 }
-header::after{
+
+header::after {
     content: '';
     top: 0;
     left: -100%;
@@ -38,33 +43,38 @@ header::after{
     z-index: -1;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4),transparent);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
     transition: all 0.5s ease;
 }
-header:hover::after{
+
+header:hover::after {
     left: 100%;
 }
-header.sticky{
+
+header.sticky {
     padding: 0 20%;
     background-color: rgba(0, 0, 0, 0.3);
 }
-.logo{
+
+.logo {
     display: flex;
     width: 120px;
     border-radius: 8px;
     font-size: 1.5rem;
     font-weight: 800;
-    align-items:center;
+    align-items: center;
     color: var(--color);
     transition: all 0.5s ease;
     cursor: pointer;
     text-align: center;
 }
-.logo:hover{
+
+.logo:hover {
     background: var(--color);
     color: var(--back);
 }
-.nav a{
+
+.nav a {
     color: var(--color);
     text-decoration: none;
     margin-right: 15px;
@@ -73,20 +83,22 @@ header.sticky{
     padding: 10px;
     transition: all 0.5s ease;
 }
+
 .nav a:hover,
-a.active{
+a.active {
     background: var(--color);
     color: var(--back);
     border-radius: 8px;
 }
- 
-#menu{
+
+#menu {
     color: var(--color);
     font-size: 1.5rem;
     cursor: pointer;
     display: none;
 }
-.banner{
+
+.banner {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, auto));
     width: 100%;
@@ -94,61 +106,67 @@ a.active{
     height: 600px;
     justify-content: space-between;
 }
-.txt{
+
+.txt {
     margin: 0 auto;
     color: var(--color);
     font-size: 1.6rem;
     padding: 20px;
 }
-.image img{
+
+.image img {
     width: 100%;
     height: 600px;
 }
-.master{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
-    width: 100%;
-    align-items: center;
+
+.master {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
-.box{
+
+.box {
     width: 300px;
     height: 300px;
-    box-shadow: 0 0 40px rgba(0,0,0,.15);
-    margin: 30px;
-    align-items: center;
+    box-shadow: 0 0 40px rgba(0, 0, 0, .15);
     text-align: center;
-    line-height:300px;
+    line-height: 300px;
     transition: all 0.5s ease;
     cursor: pointer;
+    margin: 40px;
 }
-.box a{
+
+.box a {
     color: var(--color);
     text-decoration: none;
     font-size: 2rem;
     font-weight: 800;
 }
-.box:hover{
+
+.box:hover {
     background: var(--color);
     scale: 1.1;
     border: 3px solid #583e35;
 }
-.box:hover a{
+
+.box:hover a {
     color: var(--back);
 }
 
-@media (max-width:900px){
-    .nav a{
+@media (max-width:900px) {
+    .nav a {
         font-size: 1.0rem;
         margin-right: 5px;
         text-align: center;
     }
 }
-@media (max-width:800px){
-    #menu{
+
+@media (max-width:800px) {
+    #menu {
         display: block;
     }
-    .nav{
+
+    .nav {
         position: absolute;
         top: 100%;
         left: 0;
@@ -160,7 +178,8 @@ a.active{
         overflow: hidden;
         transition: all 0.5s ease;
     }
-    .nav a{
+
+    .nav a {
         display: block;
         font-size: 1.1rem;
         text-align: center;
@@ -168,15 +187,27 @@ a.active{
         opacity: 0;
         transition: all 0.5s ease;
     }
+
     .nav.open {
         height: 15rem;
     }
+
     .nav.open a {
         transform: translateY(0);
         opacity: 1;
         transition-delay: calc(.15s * var(--i));
     }
-    .banner{
-        margin-bottom: 10rem;
+
+    .banner {
+        margin-bottom: 15rem;
+    }
+    .txt{
+        margin-top: 5rem;
+    }
+    .image img{
+        margin: 0 auto;
+    }
+    .box{
+        width: 80%;
     }
 }
