--- a/style.css
+++ b/style.css
@@ -334,20 +334,36 @@ cursor: pointer;
 }
 
 .modal-content {
-    margin: auto;
+    margin:0 auto;
     display: block;
     width: 80%;
     max-width: 800px;
     max-height: 80%;
     animation: modal-show 0.6s;
     border-radius: 8px;
+    position: absolute;
+    top: 20%;
+    left: 10%;
 }
 
 
 
 @keyframes modal-show {
-    from {opacity: 0;}
-    to {opacity: 1;}
+   0%{
+    opacity: 0;
+   }
+   25%{
+    opacity: 0.25;
+   }
+   50%{
+    opacity: 0.5;
+   }
+   75%{
+    opacity: 0.75;
+   }
+   100%{
+    opacity: 1;
+   }
 }
 
 .footer {
